# serengeti

./: .gitignore  README.md  databox.py  notes.md  pyproject.toml  requirements.txt  sdk.py  serengeti.code-workspace  setup.cfg  setup.py  syntax.md  task.py
arrow/: arrow.py  filter.yml
serengeti/: README.md  __init__.py  arrow.py  executor.py  operator.py  read.py  stream.py  types.py
serengeti/arrow/: notes.md
tests/: test_stream.py
