[tool.poetry]
name = "serengeti"
version = "0.0.1"
description = "Declarative and Scalable Streaming Pipelines"
authors = ["Daniel Gottlieb Dollerup"]
license = "Apache-2.0"
packages = [
    { include = "serengeti" },
]

[tool.poetry.dependencies]
expression = "^4.0.0"
python = ">=3.9,<3.11"
ray = "^2.1.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.1"
ipython = "^8.4.0"

[tool.black]
line-length = 99

[tool.flak8]
max-line-length = 99
ignore = 'E305 W504 W605 W292'

[tool.pytest]
addopts = '--verbose'
python_files = 'tests/*.py'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
